[tool.poetry]
name = "people-popper"
version = "0.1.0"
description = "Script to solve a puzzle."
authors = ["Eric Parkin <eric.parkin@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
